Fix mobile hero above-the-fold spacing and overlap
Reduce title/fukidashi heights and top margin on mobile to prevent
the box image from overlapping with the fixed bottom bar. Add white
pseudo-element to bridge the gap between the announcement banner and
hero title. Hide "update" in "Expansion update!" on small phones
(<420px) to prevent text overflow.

--- a/src/css/landingPage.module.css
+++ b/src/css/landingPage.module.css
@@ -193,23 +193,43 @@
   justify-content: center;
 }
 
+@media only screen and (max-width: 420px) {
+  .hideOnSmallPhone {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .fukidashi {
+    width: 110svw;
+    height: 12svh;
+  }
+  .heroTitle {
+    height: 14svh;
+    font-size: 0.85rem !important;
+  }
+  .heroTitleWrapper {
+    margin-top: 4svh;
+  }
+}
+
 @media only screen and (max-width: 450px) {
   .fukidashi {
     width: 110svw;
-    height: 20svh;
+    height: 15svh;
   }
   .heroTitle {
-    height: 25svh;
+    height: 18svh;
   }
 }
 
 @media only screen and (max-width: 600px) and (min-width: 450px) {
   .fukidashi {
     width: 110svw;
-    height: 15svh;
+    height: 12svh;
   }
   .heroTitle {
-    height: 20svh;
+    height: 15svh;
   }
 }
 
@@ -240,8 +260,17 @@
     background-color: #fff;
     text-wrap: balance;
   }
+  .heroTitle::before {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: -5%;
+    width: 110%;
+    height: 50svh;
+    background-color: inherit;
+  }
   .heroTitleWrapper {
-    margin-top: 12svh;
+    margin-top: 6svh;
   }
 }
 
