--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -346,3 +346,9 @@
     height: 28px;
   }
 }
+
+@media only screen and (max-width: 420px) {
+  .hideOnSmallPhone {
+    display: none;
+  }
+}
